fix: add login and oauth access

--- a/views/app.ejs
+++ b/views/app.ejs
@@ -42,5 +42,9 @@
   
 <h1>Completed Percentage %</h1>
 <h2><%=percent%></h2>
+
+<a class="btn btn-light btn-lg" href="/logout" role="button">Log Out</a>
+
+
 <%- include('footer.ejs') %>
   
